<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorProfile">

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_book_appointment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_doctor_profile_img"
                    android:layout_width="@dimen/doctor_image_width"
                    android:layout_height="@dimen/doctor_image_width"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/doctor_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/doctor" />

                <FrameLayout
                    android:id="@+id/frameLayout4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_doctor_profile_img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_doctor_profile_img"
                    app:layout_constraintTop_toTopOf="@+id/img_doctor_profile_img">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_doctor_profile_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/doctor_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_doctor_profile_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/dr_specialty"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/default_shape_inactive_color"
                            app:layout_constraintEnd_toEndOf="@+id/tv_doctor_profile_name"
                            app:layout_constraintStart_toStartOf="@+id/tv_doctor_profile_name"
                            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_profile_name" />

                        <TextView
                            android:id="@+id/tv_doctor_profile_hopital_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/hospital_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/darker_gray"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/tv_doctor_profile_title"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="@+id/tv_doctor_profile_title"
                            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_profile_title" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </FrameLayout>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/biography"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimaryBlack"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/img_doctor_profile_img"
                    app:layout_constraintTop_toBottomOf="@+id/img_doctor_profile_img" />


                <com.skyhope.showmoretextview.ShowMoreTextView
                    android:id="@+id/text_view_show_more"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/see_more"
                    app:layout_constraintEnd_toEndOf="@+id/textView14"
                    app:layout_constraintStart_toStartOf="@+id/textView14"
                    app:layout_constraintTop_toBottomOf="@+id/textView14" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/specialties"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimaryBlack"
                    app:layout_constraintEnd_toEndOf="@+id/text_view_show_more"
                    app:layout_constraintStart_toStartOf="@+id/text_view_show_more"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_show_more" />

                <FrameLayout
                    android:id="@+id/frameLayout3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chipGroupSpecialties"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:visibility="visible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0"
                            app:selectionRequired="false">

                        </com.google.android.material.chip.ChipGroup>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </FrameLayout>

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/schedule"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimaryBlack"
                    app:layout_constraintEnd_toEndOf="@+id/frameLayout3"
                    app:layout_constraintStart_toStartOf="@+id/textView16"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />

                <FrameLayout
                    android:id="@+id/frameLayout5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView17">

                    <devs.mulham.horizontalcalendar.HorizontalCalendarView
                        android:id="@+id/calendarView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/calendar_item_background"
                        app:selectedDateBackground="@drawable/selected_calendar_item_background"
                        app:selectorColor="@color/transparent"
                        tools:ignore="SpeakableTextPresentCheck" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frameLayout6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout5">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/select_schedule_time"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chipGroupTimeSlots"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:checkable="true"
                            android:clickable="true"
                            android:focusable="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView19"
                            app:singleSelection="true"
                            tools:ignore="SpeakableTextPresentCheck">

                        </com.google.android.material.chip.ChipGroup>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_book_appointment"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:text="@string/book_appointment"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/colorPrimary"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>